Inputs for injury tolerances and other flags. Updated width to show full sheet by default. Placeholder for armour display.

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -238,7 +238,7 @@
 
 #tabselect {
 	display: grid;
-	grid-template-columns: repeat(6,0fr);
+	grid-template-columns: repeat(7,0fr);
 	border-top: 2px groove darkgoldenrod;
 }
 
@@ -794,4 +794,18 @@
 	font-size: 16px;
 	line-height: 20px;
 	border-bottom: 2px solid #b5b3a4;
+}
+
+.injuryTolerancesTable {
+	flex: 1;
+	width: unset;
+	margin: 0px 5px;
+}
+
+.injuryTolerancesCheckTd {
+	width: 20px;
+}
+
+.injuryTolerancesLabel {
+	width: auto;
 }
