Display of hitlocations and DR on head

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -489,8 +489,16 @@
 
 			{{!-- Armour Display Tab --}}
 			<div class="tab stats" data-tab="armour-display" data-group="primary">
-				<div>
-
+				<div class="humanoidHitLocations">
+					<div class="location-skull">## / ##</div>
+					<div class="location-ear-left">## / ##</div>
+					<div class="location-ear-right">## / ##</div>
+					<div class="location-eye-left">## / ##</div>
+					<div class="location-eye-right">## / ##</div>
+					<div class="location-cheek-left">## / ##</div>
+					<div class="location-cheek-right">## / ##</div>
+					<div class="location-nose">## / ##</div>
+					<div class="location-jaw">## / ##</div>
 				</div>
 			</div>
 
