--- a/gurps4e.css
+++ b/gurps4e.css
@@ -809,3 +809,63 @@
 .injuryTolerancesLabel {
 	width: auto;
 }
+
+.humanoidHitLocations {
+	display: grid;
+	grid-template-columns: repeat(30,15px);
+	grid-template-rows: repeat(93,15px);
+	text-align: center;
+}
+
+.humanoidHitLocations div {
+	border: #7a7971 solid 1px;
+}
+
+.location-skull {
+	grid-column: 11 / 19;
+	grid-row: 1 / 3;
+}
+
+.location-ear-left {
+	grid-column: 9 / 11;
+	grid-row: 3 / 6;
+}
+
+.location-ear-right {
+	grid-column: 19 / 21;
+	grid-row: 3 / 6;
+}
+
+.location-eye-left {
+	grid-column: 12 / 14;
+	grid-row: 3 / 5;
+	z-index: 10;
+}
+
+.location-eye-right {
+	grid-column: 16 / 18;
+	grid-row: 3 / 5;
+	z-index: 10;
+}
+
+.location-cheek-right {
+	grid-column: 16 / 19;
+	grid-row: 5 / 6;
+	border: unset !important;
+}
+
+.location-cheek-left {
+	grid-column: 11 / 14;
+	grid-row: 5 / 6;
+	border: unset !important;
+}
+
+.location-nose {
+	grid-column: 14 / 16;
+	grid-row: 3 / 6;
+}
+
+.location-jaw {
+	grid-column: 11 / 19;
+	grid-row: 6 / 8;
+}
