--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -499,6 +499,19 @@
 					<div class="location-cheek-right">## / ##</div>
 					<div class="location-nose">## / ##</div>
 					<div class="location-jaw">## / ##</div>
+					<div class="location-neck">## / ##</div>
+					<div class="location-shoulder-left">## / ##</div>
+					<div class="location-shoulder-right">## / ##</div>
+					<div class="location-upper-arm-left">## / ##</div>
+					<div class="location-upper-arm-right">## / ##</div>
+					<div class="location-elbow-left">## / ##</div>
+					<div class="location-elbow-right">## / ##</div>
+					<div class="location-forearm-left">## / ##</div>
+					<div class="location-forearm-right">## / ##</div>
+					<div class="location-wrist-left">## / ##</div>
+					<div class="location-wrist-right">## / ##</div>
+					<div class="location-hand-left">## / ##</div>
+					<div class="location-hand-right">## / ##</div>
 				</div>
 			</div>
 
